Code restructuring for deployment over NGinx

--- a/assets/index.html
+++ b/assets/index.html
@@ -12,8 +12,8 @@
 		<meta name="description" content="Cordain's Main Website">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/global.min.css">
+		<link rel="stylesheet" href="css/bootstrap-min.css">
+		<link rel="stylesheet" href="css/global-min.css">
 	</head>
 	<body>
 		<!--[if lt IE 7]>
@@ -23,9 +23,9 @@
 		<!-- Add your site or application content here -->
 		<p>Hello world! This is HTML5 Boilerplate.</p>
 
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/global.min.js"></script>
+		<script src="js/jquery-min.js"></script>
+		<script src="js/bootstrap-min.js"></script>
+		<script src="js/global-min.js"></script>
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 		<script>
