1. Font awesome added 2. Initial text mockup for the home page. Still lot of work pending

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,20 +8,68 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Cordain Web</title>
+		<title>Cordain</title>
 		<meta name="description" content="Cordain's Main Website">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="author" content="Mohit Khanna">
+
+		<link rel="icon" href="images/favicon.ico">
 
 		<link rel="stylesheet" href="css/bootstrap-min.css">
+		<link rel="stylesheet" href="css/font-awesome-min.css">
 		<link rel="stylesheet" href="css/global-min.css">
 	</head>
+
 	<body>
 		<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
 
 		<!-- Add your site or application content here -->
-		<p>Hello world! This is HTML5 Boilerplate.</p>
+		<div class="container">
+
+			<div class="header">
+
+				<div class="logo">
+					<a href="/">cordain</a>
+				</div>
+
+				<div class="options">
+					<a href="#benefits">Benefits</a>
+					<a href="#products">Products &amp; Services</a>
+					<a href="#partners">Partners</a>
+					<a href="/">Blog</a>
+					<a href="#team">Team</a>
+					<a href="#contact">Contact</a>
+				</div>
+
+			</div> <!-- header -->
+
+			<!-- main content of the website goes here -->
+			<div class="content">
+
+				Main Website content goes here
+
+			</div> <!-- content -->
+
+			<div class="footer">
+
+				<div class="logo">cordain</div>
+
+				<!-- social reach -->
+				<a class="social" href="https://www.facebook.com/cordainweb">Facebook</a>
+				<a class="social" href="https://twitter.com/cordainweb">Twitter</a>
+				<a class="social" href="#">Google+</a>
+				<a class="social" href="#">Instagram</a>
+
+				<!-- legal stuff & copyright -->
+				<a class="" href="#">Contact us</a>
+				<a class="" href="#">&reg; Trademarks</a>
+				<a class="" href="#">Privacy &amp; legal notes</a> - <span>&copy; 2014 Cordain</span>
+
+			</div> <!-- footer -->
+
+		</div> <!-- container -->
 
 		<script src="js/jquery-min.js"></script>
 		<script src="js/bootstrap-min.js"></script>
